Fixed alignment issues; more progress on calendar script

--- a/assets/css/3-sections/_post.sass
+++ b/assets/css/3-sections/_post.sass
@@ -18,18 +18,21 @@
 		margin: 0
 		padding: 0
 .post-abstract-img
-	width: 100%
-	height: 100%
 	display: block
+	img
+		width: 100%
 .post-text-bar
 	@include grayBoxShade
 .post-text
-	padding: 0px 2% 0px 2%
 	.highlight
 		max-width: 700px
+	padding: 0px 2% 0px 2%
 	p
 		max-width: 700px
 		margin: 0 auto
+	h2
+		max-width: 700px
+		margin: 30px auto 10px auto
 .post-end-bar
 	@include whiteBoxShade
 	width: 100%
@@ -65,11 +68,9 @@
 	max-width: 100% !important
 
 @media only screen and (min-width: $lrgWidth)
-	.post-end-left, .post-end-right
-		width: 48% !important
-		float: left
 	.post-end-left, .post-abstract-text
 		padding-right: 2%
-	.post-abstract-img, .post-abstract-text
+	.post-abstract-img, .post-abstract-text, .post-end-left, .post-end-right
 		width: 48% !important
-		float: left
+		display: table-cell !important
+		vertical-align: middle
